--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
+.DS_Store
 output/
 build/classes/
 build/package/
 build/test/
 build/project/auto-updated/do-not-modify/lib/java-1.6/
-
+build/checkstyle-report.txt
