--- a/build.properties
+++ b/build.properties
@@ -37,7 +37,7 @@
 api.version = 0.2
 
 # This is the release version identifier used in released packages.
-release.version = ${api.version}.0-WIP
+release.version = ${api.version}.0_WIP
 
 # The target Java version to cross-compile to. Use the version
 # convention 1.x to specify the version.
